# DSOSA

./: .env.example  .gitignore  DEPENDENCY_POLICY.md  Dockerfile  README.md  SUPPLY_CHAIN.md  docker-compose.yml  go.mod
.github/workflows/: ci.yml
cmd/dsovs/: main.go
docs/dependency-decisions/: 0000-current-baseline.md  README.md  TEMPLATE.md
docs/verification/: mvp-scoring.md
dsovs-assessment-tool/: .env.example  README.md  docker-compose.yml
dsovs-assessment-tool/backend/: Dockerfile  alembic.ini  pyproject.toml
dsovs-assessment-tool/backend/alembic/: env.py
dsovs-assessment-tool/backend/alembic/versions/: 0001_initial_schema.py
dsovs-assessment-tool/backend/app/: config.py  crud.py  dsovs_client.py  main.py  models.py  schemas.py  scoring.py
dsovs-assessment-tool/backend/app/routers/: assessments.py  catalogue.py  projects.py  reports.py
dsovs-assessment-tool/cmd/dsovs/: main.go
dsovs-assessment-tool/frontend/: Dockerfile  index.html  package-lock.json  package.json
internal/app/: routes.go  scoring_flow_test.go  server.go  ui_contract_test.go
internal/assessment/: improvements.go  models.go  reports.go  scoring.go
internal/dsovs/: catalogue.go  catalogue_test.go  client.go  models.go  sync.go
internal/storage/: events.go  json_store.go  store.go
internal/web/: static.go  templates.go
web/static/: app.js  styles.css  wcag-lite.css  wcag-lite.js
web/templates/: assessment.html  assessment_new.html  assessments.html  dashboard.html  layout.html  project.html  project_new.html  projects.html  report.html  results.html
(+37 files in other folders)
