[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dsovs-assessment-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.19",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]
